# blender_fiducial_markers

./: README.md  __init__.py  bfm.py  bfm_external.py  bfm_marker.py  bfm_native.py  bfm_python.py  blender_manifest.toml  tests.py
native/: Cargo.toml  main.cpp
native/src/: main.rs
